# gloam

./: .release-plz.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE.asc  README.md  build.rs
.cargo/: config.toml
.claude/: .gitignore  CLAUDE.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release-plz.yml  update-bundled.yml
bundled/: provenance.json
bundled/xml/: gl.xml
docs/: manifest.md  provenance-internals.md
examples/: CMakeLists.txt  README.md
examples/gl-triangle/: CMakeLists.txt  main.c
examples/gl-triangle/gloam/.gloam/: manifest.json
examples/gl-triangle/gloam/include/gloam/: gl.h
examples/gl-triangle/gloam/src/: gl.c
examples/vk-info/: CMakeLists.txt  main.c
examples/vk-info/gloam/.gloam/: manifest.json
examples/vk-info/gloam/include/gloam/: vk.h
examples/vk-info/gloam/src/: vk.c
scripts/: fetch_bundled.sh
src/: build_info.rs  bundled.rs  cli.rs  diag.rs  fetch.rs  identity.rs  ir.rs  lib.rs  main.rs  preamble.rs  resolve.rs  version.rs
src/generator/: mod.rs
src/generator/c/: mod.rs  model.rs
src/generator/c/templates/: hash_search.j2  header.h.j2  impl_util.j2  library.j2  loader.j2  source.c.j2  utils.j2
src/generator/rust/: mod.rs
src/generator/rust/templates/: mod.rs.j2
src/parse/: commands.rs  enums.rs  features.rs  mod.rs  types.rs  xml.rs
src/provenance/: acquire.rs  cache.rs  engine.rs  fetch_tests.rs  load.rs  manifest.rs  mod.rs
src/resolve/: commands.rs  enums.rs  fixtures.rs  mod.rs  pfn.rs  protect.rs  requirements.rs  selection.rs  spec_info.rs  typedefs.rs  types.rs
tests/: generate_c.rs  generate_vulkan.rs  generate_wgl_glx.rs  golden.rs  integration_coverage.rs  lock_flows.rs  predecessor_promoted.rs  provenance_manifest.rs
tests/common/: mod.rs
tests/golden/egl/: egl.c  egl.h
tests/golden/gl_core_full/: gl.c  gl.h
tests/golden/gl_core_noext/: gl.c  gl.h
tests/golden/gles1/: gles1.c  gles1.h
tests/golden/glx/: glx.c  glx.h
tests/golden/merged_gl_gles2/: gl.c  gl.h
tests/golden/vk_ext/: vk.c  vk.h  vulkan.c  vulkan.h
tests/golden/vk_external_headers/: vk.c  vk.h  vulkan.c  vulkan.h
tests/golden/vk_noext/: vk.c  vk.h  vulkan.c  vulkan.h
tests/golden/wgl/: wgl.c  wgl.h
xtask/: Cargo.toml
xtask/src/: main.rs
