[package]
name           = "gloam"
version        = "0.4.1"
edition        = "2024"
description    = "Loader generator for Vulkan, OpenGL, OpenGL ES, EGL, GLX, and WGL"
license        = "MIT OR Apache-2.0"
repository     = "https://github.com/tycho/gloam"
rust-version   = "1.88"

[[bin]]
name           = "gloam"
path           = "src/main.rs"

[features]
default = ["fetch"]
fetch   = ["dep:reqwest"]

[dependencies]
anyhow         = "1"
clap           = { version = "4", features = ["derive"] }
indexmap       = { version = "2", features = ["serde"] }
minijinja      = "2"
reqwest        = { version = "0.13", features = ["blocking", "rustls"], default-features = false, optional = true}
roxmltree      = "0.21"
serde          = { version = "1", features = ["derive"] }
xxhash-rust    = { version = "0.8", features = ["xxh3"] }

[dev-dependencies]
assert_cmd     = "2"
predicates     = "3"
tempfile       = "3"
