[package]
name           = "gloam"
version        = "0.4.9"
edition        = "2024"
description    = "Loader generator for Vulkan, OpenGL, OpenGL ES, EGL, GLX, and WGL"
license        = "MIT OR Apache-2.0"
repository     = "https://github.com/tycho/gloam"
rust-version   = "1.88"

[[bin]]
name           = "gloam"
path           = "src/main.rs"

[features]
default = ["fetch"]
fetch   = ["dep:reqwest", "dep:serde_json", "dep:base64"]

[dependencies]
anyhow         = "1"
base64         = { version = "0.22", optional = true }
clap           = { version = "4", features = ["derive"] }
indexmap       = { version = "2", features = ["serde"] }
minijinja      = "2"
reqwest        = { version = "0.13", features = ["blocking", "rustls"], default-features = false, optional = true}
roxmltree      = "0.21"
serde          = { version = "1", features = ["derive"] }
serde_json     = { version = "1", optional = true }
xxhash-rust    = { version = "0.8", features = ["xxh3"] }

[dev-dependencies]
assert_cmd     = "2"
cc             = "1"
predicates     = "3"
tempfile       = "3"
