[workspace]
members = ["xtask"]

[package]
name           = "gloam"
version        = "0.5.2"
edition        = "2024"
description    = "Loader generator for Vulkan, OpenGL, OpenGL ES, EGL, GLX, and WGL"
license        = "MIT OR Apache-2.0"
repository     = "https://github.com/tycho/gloam"
rust-version   = "1.88"

[[bin]]
name           = "gloam"
path           = "src/main.rs"

[features]
default = ["fetch"]
fetch   = ["dep:ureq", "dep:flate2", "dep:base64", "dep:rusqlite", "dep:directories"]

[dependencies]
anyhow         = "1"
base64         = { version = "0.22", optional = true }
clap           = { version = "4", features = ["derive"] }
directories    = { version = "6", optional = true }
# Pulled only to steer ureq's gzip: ureq depends on flate2 with its default
# miniz_oxide backend; naming flate2 directly with zlib-rs unifies onto the
# faster pure-Rust zlib-rs backend (no aws-lc, no C).
flate2         = { version = "1", default-features = false, features = ["zlib-rs"], optional = true }
indexmap       = { version = "2", features = ["serde"] }
minijinja      = "2"
roxmltree      = "0.21"
rusqlite       = { version = "0.39", features = ["bundled"], optional = true }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
sha1           = "0.11"
# Blocking HTTPS for --fetch: rustls + ring (no aws-lc) and gzip, no async
# runtime. Replaces reqwest (which dragged in tokio/hyper/aws-lc-sys).
ureq           = { version = "3", default-features = false, features = ["rustls", "gzip"], optional = true }
xxhash-rust    = { version = "0.8", features = ["xxh3"] }

[dev-dependencies]
assert_cmd     = "2"
cc             = "1"
predicates     = "3"
tempfile       = "3"
